--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,20 @@ body {
   line-height: 1.7rem;
 }
 
+header {
+}
+
+main {
+  margin-top: 30px;
+}
+
+footer {
+  color: #fff;
+  background: black;
+}
+
 a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -30,19 +42,7 @@ h7 {
 }
 
 p {
-  margin: 10px 0;
-}
-
-header {
-}
-
-main {
-  margin-top: 30px;
-}
-
-footer {
-  background-color: orange;
-  color: #fff;
+  padding: 10px 0;
 }
 
 img {
@@ -108,11 +108,17 @@ img {
   overflow: auto;
 }
 
+/*clear float*/
 .clr {
   clear: both;
 }
 
-/* body > header > navbar */
+.dropdown {
+  display: block;
+  padding: 20px;
+  text-align: center;
+}
+/* id navbar */
 #navbar {
   background-color: #333;
   color: white;
@@ -155,9 +161,14 @@ img {
 #navbar ul li:hover ul {
   display: none;
   position: absolute;
-  left: a;
+  left: 0;
   width: 100px;
   margin-top: 1rem;
+  color: #fff;
+}
+
+#navbar ul li:hover ul li {
+  display: inline;
   color: #fff;
 }
 
@@ -167,17 +178,13 @@ img {
   text-align: center;
 }
 
-#navbar ul li:hover ul li {
-  color: #fff;
-}
-
 #navbar ul li a:hover,
 #navbar ul li a.current {
   background-color: #444;
   color: #f7c08a;
 }
 
-/* body > header > showcase */
+/* id showcase */
 #showcase {
   background: url(../img/showcase.jpg) no-repeat center center/cover;
   height: 600px;
@@ -198,7 +205,7 @@ img {
   padding-bottom: 20px;
   line-height: 1.5em;
 }
-/* body > main > home-info*/
+/* id home-info*/
 #home-info-1,
 #home-info-2,
 #home-info-3 {
@@ -208,7 +215,7 @@ img {
 #home-info-1 .info-1-img {
   float: left;
   width: 50%;
-  background: url(../img/gallery/main/item1.png) no-repeat center center/cover;
+  background: url(../img/gallery/main/main1.jpg) no-repeat center center/cover;
   min-height: 100%;
 }
 
@@ -222,14 +229,14 @@ img {
 }
 
 #home-info-2 .info-2-img {
-  float: right;
+  float: left;
   width: 50%;
-  background: url(../img/gallery/main/item2.png) no-repeat center center/cover;
+  background: url(../img/gallery/main/main2.jpg) no-repeat center center/cover;
   min-height: 100%;
 }
 
 #home-info-2 .info-2-desc {
-  float: left;
+  float: right;
   width: 50%;
   height: 100%;
   text-align: center;
@@ -240,7 +247,7 @@ img {
 #home-info-3 .info-3-img {
   float: left;
   width: 50%;
-  background: url(../img/gallery/main/item4.png) no-repeat center center/cover;
+  background: url(../img/gallery/main/main3.jpg) no-repeat center center/cover;
   min-height: 100%;
 }
 
@@ -259,10 +266,7 @@ img {
   padding-bottom: 30px;
 }
 
-/* body > footer*/
-footer {
-  background: black;
-}
+/* id footer*/
 
 footer > div > ul > li {
   float: left;
@@ -276,7 +280,7 @@ footer > div > ul > li > ul > li {
   list-style: none;
 }
 
-footer.logo-facebook {
+footer .logo-facebook {
   background: url(../img/logo/logo-icon.png);
 }
 
